--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
                         <li class="nav-item"><a class="nav-link" href="{% url 'instructors_list' %}">Instructors</a>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'pricing' %}">Subscribe</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'subscriptions:pricing_view' %}">Subscribe</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'contact_us' %}">Contact Us</a></li>
                     </ul>
                     <ul class="navbar-nav ms-5">
