Fix navbar Subscribe link to /subscriptions/pricing/

--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -1,24 +1,26 @@
-{% extends "account/base.html" %}
-
+{% extends "base.html" %}
 {% load i18n %}
-{% load account %}
+{% load widget_tweaks %}
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
+<div class="container d-flex justify-content-center align-items-center" style="min-height: 80vh;">
+  <div class="card shadow-lg p-4" style="max-width: 450px; width: 100%;">
+    <h2 class="text-center mb-3">{% trans "Reset Your Password" %}</h2>
+    <p class="text-muted text-center mb-4">{% trans "Enter your email to receive password reset instructions." %}</p>
 
-    <h1>{% trans "Password Reset" %}</h1>
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
-
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
+    <form method="POST" action="{% url 'account_reset_password' %}">
+      {% csrf_token %}
+      <div class="mb-3">
+        <label class="form-label">{{ form.email.label }}</label>
+        {{ form.email|add_class:"form-control" }}
+        {% if form.email.errors %}
+          <div class="text-danger small">{{ form.email.errors.0 }}</div>
+        {% endif %}
+      </div>
+      <button type="submit" class="btn btn-primary w-100">{% trans "Reset Password" %}</button>
     </form>
-
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+  </div>
+</div>
 {% endblock %}
